# anyrun-plugins

./: Cargo.toml  Makefile  TODO
logseq/: Cargo.toml
logseq/src/: lib.rs  logseq.rs
raindrop/: Cargo.toml
raindrop/src/: lib.rs  main.rs
raindrop/src/raindrop/: cache.rs
res/: download-raindrop-favicons.service  download-raindrop-favicons.timer  download_raindrop_favicons.sh  update-logseq-cache.service  update-logseq-cache.sh  update-logseq-cache.timer  update-raindrop-cache.service  update-raindrop-cache.timer
